# LLM-Tool-Gemotry

./: .gitignore  README.md  pyproject.toml
configs/: jacobian_lens_fit_bfcl.yaml  jacobian_lens_fit_wikitext_100.yaml  paper1_bfcl_gemma3_4b.yaml  paper1_bfcl_qwen35_4b.yaml  paper1_bfcl_qwen35_9b.yaml  paper1_bfcl_v4_gemma3_4b.yaml  paper1_bfcl_v4_qwen35_9b.yaml  paper1_bfcl_v4_qwen35_9b_base.yaml  paper1_bfcl_v4_qwen3_8b.yaml  paper1_mock.yaml  paper1_real_template.yaml  paper1_seal_gemma3_4b.yaml  paper1_seal_qwen35_4b.yaml  paper1_seal_qwen35_9b.yaml  paper1_sealtools_gemma3_4b.yaml  paper1_sealtools_qwen3_8b.yaml  paper1_sealtools_train_gemma3_4b.yaml  paper1_sealtools_train_qwen35_9b.yaml  paper1_sealtools_train_qwen35_9b_base.yaml  paper1_sealtools_train_qwen3_8b.yaml  paper1_toolhop_gemma3_4b.yaml  paper1_toolhop_qwen35_4b.yaml  paper1_toolhop_qwen35_9b.yaml  paper1_toolhop_qwen35_9b_base.yaml  paper1_toolhop_qwen3_8b.yaml  pilot_sealtools_train_qwen35_9b.yaml  rq1_bfcl_gemma3_4b_wu.yaml  rq1_bfcl_gemma4_e4b.yaml  rq1_bfcl_llama31_8b.yaml  rq1_bfcl_qwen3_0_6b_nothink.yaml  rq1_bfcl_qwen3_14b_nothink.yaml  rq1_bfcl_qwen3_1_7b_nothink.yaml  rq1_bfcl_qwen3_4b.yaml  rq1_bfcl_qwen3_4b_nothink.yaml  rq1_bfcl_qwen3_8b.yaml  rq1_bfcl_qwen3_8b_nothink.yaml
docs/: data_contract.md  paper1_pipeline.md
scripts/: analyze_bfcl.sbatch  analyze_tool_card_geometry.sbatch  analyze_tool_choice.sbatch  extract_tool_card_geometry.sbatch  fit_jacobian_lens.sbatch  launch_bfcl.sh  launch_matrix.sh  launch_paper1.sh  launch_qwen3_jacobian_family.sh  launch_qwen3_menu_order_jacobian.sh  launch_tool_card_rq1.sh  paper1_component_ablation.sbatch  paper1_geometry.sbatch  (+5 more)
(+47 files in other folders)
