[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toolgeo"
version = "0.1.0"
description = "BFCL decision-state experiments for tool calling"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "torch>=2.4",
  "transformers==5.14.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
