[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "toolgeo"
version = "0.1.0"
description = "BFCL decision-state experiments for tool calling"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "torch>=2.4",
  "transformers==5.14.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
jacobian = [
  "datasets==5.0.0",
  "jlens @ git+https://github.com/anthropics/jacobian-lens.git@581d398613e5602a5af361e1c34d3a92ea82ba8e",
]

[tool.setuptools.packages.find]
where = ["src"]
